--- a/Day3/software_resources_for_preprocessing.Rmd
+++ b/Day3/software_resources_for_preprocessing.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Software Resources For Preprocessing (also)"
+title: "Software Resources (also) For Preprocessing"
 author: "Pietro Franceschi"
 output:
   ioslides_presentation: default
