--- a/Day3/faahKO.Rmd
+++ b/Day3/faahKO.Rmd
@@ -88,20 +88,27 @@ I <- intensity(raw_data)
 ```
 
 
-Let's look to the structure of thse three objects
+Let's look to the structure of these three objects
 
 ```{r}
 glimpse(rt)
 ```
 
 These are the retention time in seconds for the chromatography of all the 8 files. 
-"F!.S0001" stands for File1, scan number 1 ... it was recorded at 2501 seconde ...
+"F1.S0001" stands for File1, scan number 1 ... it was recorded at 2501 seconds ...
 
 Another way to see that 
 
 ```{r}
 plot(rt)
 ```
+
+```{r}
+length(rt)
+```
+
+
+
 
 Where we see the increasing time scale for each file.
 
@@ -120,7 +127,7 @@ glimpse(I[1:20])
 We can plot a complete spectrum (here the first scan of the first sample ...)
 
 ```{r}
-plot(mz$F1.S0001,I$F1.S0001, type = "h", main = names(mz)[1])
+plot(mz$F1.S0130,I$F1.S0130, type = "h", main = names(mz)[1])
 ```
 
 Ok, working with all files together is not the best ... for visualization and handling. To facilitate the "cutting" by file, xcms is provided with a `split()` function which can be combined with a `fromFile` function to create a list with the content separate by file
@@ -135,7 +142,7 @@ length(by_file_mz)
  As we discussed, metabolites are visible as peaks ia 2d mz/rt plane ...
  
 ```{r}
-mytibble <- tibble(rt = by_file_rt[[2]], mz = by_file_mz[[2]], I = by_file_I[[2]])
+mytibble <- tibble(rt = by_file_rt[[1]], mz = by_file_mz[[1]], I = by_file_I[[1]])
 mytibble
 ```
  
@@ -143,13 +150,31 @@ mytibble
 
 jet.colors <- colorRampPalette(c("#00007F", "blue", "#007FFF", "cyan", "#7FFF7F", "yellow", "#FF7F00", "red", "#7F0000"))
 
-mytibble %>% 
+test <- mytibble %>% 
   unnest(c("mz","I")) %>% 
   ggplot() + 
-  geom_point(aes(x = rt, y = mz, col = sqrt(I)), size = 0.1) + 
+  geom_point(aes(x = rt, y = mz, col = log10(I)), size = 0.7) + 
   scale_color_gradientn(colours = jet.colors(7)) + 
+  xlim(2600,2700) + 
+  ylim(380,390) + 
   theme_light()
+
+test
+
 ```
+
+Let's try a rd plot with plotly
+
+```{r}
+mytibble %>% 
+  unnest(c("mz","I")) %>% 
+  filter(mz > 380 & mz < 390) %>% 
+  filter(rt > 2600 & mz < 2800) %>% 
+  plot_ly() %>%
+  add_markers(x = ~mz, y = ~rt, z = ~I, color = ~I, marker = list(size = 1))
+```
+
+
 
 
 1. A mass spectrum can be seen as a vertical cut of the previous map ... 
@@ -204,7 +229,7 @@ ion_I_know <- chromatogram(raw_data, mz = c(334.9, 335.1))
 plot(ion_I_know, col = group_colors[raw_data$sample_group])
 ```
 
-The previous plot is important. It is tellin us that the _metabolite_I_know_ is present in the sample and is released by the chromatographic column at around 2800 sec ... There it is producing a peal in the signal of the _ion_I_know_ @mz335
+The previous plot is important. It is telling us that the _metabolite_I_know_ is present in the sample and is released by the chromatographic column at around 2800 sec ... There it is producing a peal in the signal of the _ion_I_know_ @mz335
 
 **To automatically find metabolites in my data I have to teach a computer to look for peaks in the chromatographic traces of all possible ions**
 
@@ -283,8 +308,8 @@ peaks_tibble <- as_tibble(first_peak_table)
 tibble(rt = by_file_rt[[1]], mz = by_file_mz[[1]], I = by_file_I[[1]]) %>% 
   unnest(c("mz","I")) %>% 
   ggplot() + 
-  geom_point(aes(x = rt, y = mz, col = sqrt(I)), size = 0.1) + 
-  geom_point(data = peaks_tibble, mapping = aes(x = rt, y = mz), col = "orange", alpha = 0.5) + 
+  geom_point(aes(x = rt, y = mz, col = log10(I)), size = 0.1) + 
+  geom_point(data = peaks_tibble, mapping = aes(x = rt, y = mz), col = "red", alpha = 0.9) + 
   scale_color_gradientn(colours = jet.colors(7)) + 
   theme_light()
 ```
@@ -293,12 +318,13 @@ tibble(rt = by_file_rt[[1]], mz = by_file_mz[[1]], I = by_file_I[[1]]) %>%
 - in some cases peaks are arranged in vertical stripes ... these are the signatures that on emetabolite is giving you more than one ion ... but all these ions are coming out at the same retention time
 
 
-Peak piching can also be performed with another algorithm ... CentWave ...
+Peak picking can also be performed with another algorithm ... CentWave ...
 
 ```{r}
 cwp <- CentWaveParam(peakwidth = c(20, 80), 
                      ppm = 30,
                      prefilter = c(3, 5000))
+cwp
 ```
 
 
@@ -334,8 +360,8 @@ peaks_tibble_cw <- as_tibble(first_peak_table_cw)
 tibble(rt = by_file_rt[[1]], mz = by_file_mz[[1]], I = by_file_I[[1]]) %>% 
   unnest(c("mz","I")) %>% 
   ggplot() + 
-  geom_point(aes(x = rt, y = mz, col = sqrt(I)), size = 0.1) + 
-  geom_point(data = peaks_tibble_cw, mapping = aes(x = rt, y = mz), col = "orange", alpha = 0.5) + 
+  geom_point(aes(x = rt, y = mz, col = log10(I)), size = 0.1) + 
+  geom_point(data = peaks_tibble_cw, mapping = aes(x = rt, y = mz), col = "red", alpha = 0.7) + 
   scale_color_gradientn(colours = jet.colors(7)) + 
   theme_light()
 ```
@@ -359,7 +385,7 @@ Obviously one could fiddle around with the parameters to look for a more coheren
 
 ## Practical #2
 
-1. Play around with the two algorithm trying to find 
+1. Play around with the two algorithm trying to find good parameters
 
 ## Peak Picking: all the dataset
 
@@ -384,7 +410,7 @@ An overall representation of their distribution in the plane is extremely intere
 chromPeaks(xdata) %>% 
   as_tibble() %>% 
   ggplot() + 
-  geom_point(aes(x = rt, y = mz), siaze = 0.3) + 
+  geom_point(aes(x = rt, y = mz, col = into), siaze = 0.3) + 
   facet_wrap(~sample) + 
   theme_light()
 ```
@@ -478,9 +504,9 @@ As before, the parameters of this step are included in a specific object
 
 ```{r}
 pdp <- PeakDensityParam(sampleGroups = xdata$sample_group,
-                        minFraction = 0.4, 
+                        minFraction = 0.5, 
                         bw = 30,
-                        binSize = 0.2)
+                        binSize = 0.1)
 ```
 
 A set of peaks will be considered a candidate to become a "valid" group if it contains peaks coming from at least a `minFraction` of samples belonging to one of the `sampleGroups`.
