--- a/Day1/Metabolomics_data_matrix.Rmd
+++ b/Day1/Metabolomics_data_matrix.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "Metabolomics Data Matrix"
 author: "Pietro Franceschi"
-output: ioslides_presentation
+output: 
+  ioslides_presentation:
+    css: "../mycss.css"
 ---
 
 ```{r setup, include=FALSE}
@@ -10,28 +12,6 @@ library(knitr)
 ```
 
 
-```{css}
-
-slides > slide {
-  background: linear-gradient(#ffffff, #ffffff 85%, #ffffff);
-  background-color: white;
-}
-
-
-#notes {
-  color: blue;
-}
-
-del {
-  color: red;
-  text-decoration: none;
-}
-
-strong {
-  color: #404040;
-}
-
-```
 
 ## Many variables in many samples
 
