--- a/Day2/Variable_distribution.Rmd
+++ b/Day2/Variable_distribution.Rmd
@@ -1,8 +1,9 @@
 ---
 title: "Variable Distribution"
 author: "Pietro Franceschi"
-date: "12/3/2020"
-output: ioslides_presentation
+output: 
+  ioslides_presentation:
+    css: "../mycss.css"
 ---
 
 ```{r setup, include=FALSE}
@@ -12,25 +13,15 @@ library(tidyverse)
 ```
 
 
-```{css}
-
-slides > slide {
-  background: linear-gradient(#ffffff, #ffffff 85%, #ffffff);
-  background-color: white;
-  }
-
-```
-
-
-
 
 ## Normal Distribution
 
 - The Normal (Gaussian) distribution has a prominent role in statistics
 - Some sort of "normality" is often the prerequisite of many statistical tools
-- The mean is the value with higher likelihood
+- With normal data the ~~mean is the value with higher likelihood~~
+- Reasoning on the mean is equivalent of reasoning on the most probable value ...
 
-```{r out.width= "70%", fig.align='center'}
+```{r out.width= "50%", fig.align='center'}
 ## Standard normal distribution:
 
 xvalues <- data.frame(x = c(-10, 10))
